--- a/web/templates/auth/email/confirm.html
+++ b/web/templates/auth/email/confirm.html
@@ -1,4 +1,4 @@
-<p>Dear {{ user.username }},</p>
+<p>亲爱的 {{ user.username }},</p>
 <p>欢迎来到<b>爱租房</b>!</p>
 <p>为激活您的账户 <a href="{{ url_for('confirm', token=token, _external=True) }}"> 点击这里</a>.</p>
 <p>或者复制链接到浏览器中访问:</p>
