--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -5,11 +5,11 @@
     <title>{{ form.pagename }} - 爱租房</title>
     <meta content='width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no' name='viewport'>
     <!-- Bootstrap 3.3.4 -->
-    <link href="/bd/web/AdminLTE/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css" />    
+    <link href="/bd/web/AdminLTE/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
     <!-- FontAwesome 4.3.0 -->
     <link href="/bd/web/static/font-awesome.min.css" rel="stylesheet" type="text/css" />
     <!-- Ionicons 2.0.0 -->
-    <link href="/bd/web/static/ionicons.min.css" rel="stylesheet" type="text/css" />    
+    <link href="/bd/web/static/ionicons.min.css" rel="stylesheet" type="text/css" />
     <!-- Theme style -->
     <link href="/bd/web/AdminLTE/dist/css/AdminLTE.min.css" rel="stylesheet" type="text/css" />
     <!-- AdminLTE Skins. Choose a skin from the css/skins 
@@ -60,36 +60,26 @@
           </a>
           <div class="navbar-custom-menu">
             <ul class="nav navbar-nav">
-              	      
+
               <!-- User Account: style can be found in dropdown.less -->
 	      <!-- user account photo view -->
               <li class="dropdown user user-menu">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                  <img src="/bd/web/AdminLTE/dist/img/user2-160x160.jpg" class="user-image" alt="User Image"/>
+                  {% if current_user.is_authenticated %}<img src="/bd/web/AdminLTE/dist/img/user2-160x160.jpg" class="user-image" alt="User Image"/>
+                    {% else %}<img src="/bd/web/AdminLTE/dist/img/user2-160x160.old.jpg" class="user-image" alt="User Image"/>{% endif %}
                   <span class="hidden-xs">{% if current_user.is_authenticated %}{{ current_user.username }}{% else %}游客{% endif %}</span>
                 </a>
                 <ul class="dropdown-menu">
                   <!-- User image -->
                   <li class="user-header">
-                    <img src="/bd/web/AdminLTE/dist/img/user2-160x160.jpg" class="img-circle" alt="User Image" />
+                    {% if current_user.is_authenticated %}<img src="/bd/web/AdminLTE/dist/img/user2-160x160.jpg" class="img-circle" alt="User Image" />
+                      {% else %}<img src="/bd/web/AdminLTE/dist/img/user2-160x160.old.jpg" class="img-circle" alt="User Image" />{% endif %}
                     <p>
-                      管理员
+                      {% if current_user.is_authenticated %}{{ current_user.username }}{% else %}游客{% endif %}
                       <small>2017年</small>
                     </p>
                   </li>
-                  <!-- Menu Body -->
-                  <li class="user-body">
-                    <div class="col-xs-4 text-center">
-                      <a href="#">工作1</a>
-                    </div>
-                    <div class="col-xs-4 text-center">
-                      <a href="#">工作2</a>
-                    </div>
-                    <div class="col-xs-4 text-center">
-                      <a href="#">工作3</a>
-                    </div>
-                  </li>
-                  <!-- Menu Footer-->
+
                   <li class="user-footer">
                     <div class="pull-left">
                       <a href="#" class="btn btn-default btn-flat">个人信息</a>
@@ -119,7 +109,8 @@
 	  {# <!-- {{{ --> #}
           <div class="user-panel">
             <div class="pull-left image">
-              <img src="/bd/web/AdminLTE/dist/img/user2-160x160.jpg" class="img-circle" alt="User Image" />
+              {% if current_user.is_authenticated %}<img src="/bd/web/AdminLTE/dist/img/user2-160x160.jpg" class="img-circle" alt="User Image" />
+                {% else %}<img src="/bd/web/AdminLTE/dist/img/user2-160x160.old.jpg" class="img-circle" alt="User Image" />{% endif %}
             </div>
             <div class="pull-left info">
               <p>{% if current_user.is_authenticated %}{{ current_user.username }}{% else %}游客{% endif %}</p>
@@ -191,7 +182,6 @@
         <section class="content-header">
           <h1>
             {{form.pagename}}
-            <small>{{form.pagetask}}</small>
           </h1>
           <ol class="breadcrumb">
             <li><a href="#"><i class="fa fa-dashboard"></i> 主页</a></li>
@@ -218,10 +208,22 @@
     {% endfor %}
     </ul>
   {% endif %}
-  
-{% endmacro %}
 
-        {% block content %}{% endblock %}
+{% endmacro %}
+{% block content %}
+<div class="container">
+    {% for message in get_flashed_messages() %}
+    <div class="alert alert-warning">
+        <button type="button" class="close" data-dismiss="alert">&times;</button>
+        {{ message }}
+    </div>
+    {% endfor %}
+
+    {% block page_content %}{% endblock %}
+</div>
+{% endblock %}
+
+
         </section><!-- /.content -->
       </div><!-- /.content-wrapper -->
       <!-- }}} -->
@@ -237,7 +239,7 @@
       <!-- }}} -->
 
 
-      
+
       <!-- Add the sidebar's background. This div must be placed
            immediately after the control sidebar -->
       <div class='control-sidebar-bg'></div>
@@ -251,7 +253,7 @@
     <!-- Resolve conflict in jQuery UI tooltip with Bootstrap tooltip -->
 
     <!-- Bootstrap 3.3.2 JS -->
-    <script src="/bd/web/AdminLTE/bootstrap/js/bootstrap.min.js" type="text/javascript"></script>    
+    <script src="/bd/web/AdminLTE/bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
     <!-- Morris.js charts -->
     <script src="/bd/web/static/raphael-min.js"></script>
     <script src="/bd/web/AdminLTE/plugins/morris/morris.min.js" type="text/javascript"></script>
@@ -274,8 +276,8 @@
     <!-- FastClick -->
     <script src="/bd/web/AdminLTE/plugins/fastclick/fastclick.min.js"></script>
     <!-- AdminLTE App -->
-    <script src="/bd/web/AdminLTE/dist/js/app.min.js" type="text/javascript"></script>    
-    
+    <script src="/bd/web/AdminLTE/dist/js/app.min.js" type="text/javascript"></script>
+
 
     <!-- AdminLTE for demo purposes -->
     <script src="../../dist/js/demo.js" type="text/javascript"></script>
