--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -63,6 +63,7 @@
 
               <!-- User Account: style can be found in dropdown.less -->
 	      <!-- user account photo view -->
+               {% if current_user.is_authenticated %}{% else %} <li><a href="{{ url_for('login') }}">登陆</a></li>{% endif %}
               <li class="dropdown user user-menu">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                   {% if current_user.is_authenticated %}<img src="/bd/web/AdminLTE/dist/img/user2-160x160.jpg" class="user-image" alt="User Image"/>
@@ -85,7 +86,7 @@
                       <a href="#" class="btn btn-default btn-flat">个人信息</a>
                     </div>
                     <div class="pull-right">
-                      <a href="#" class="btn btn-default btn-flat">注销</a>
+                      <a href="{{ url_for('logout') }}">注销</a>
                     </div>
                   </li>
                 </ul>
@@ -147,7 +148,7 @@
                <small class="label pull-right bg-yellow">{{form.institution_count}}</small>
 	       {%  endif %}
 </a></li>
-	    <li class="active"><a href="/bd/view_bulletins"><i class="fa fa-circle-o"></i> 公告列表
+	    <li class="active"><a href="/bd/view_bulletins"><i class="fa fa-circle-o"></i> 新闻公告列表
 		{% if form and form.bulletin_count %}
                <small class="label pull-right bg-yellow">{{form.bulletin_count}}</small>
 	       {%  endif %}
@@ -157,13 +158,12 @@
                <small class="label pull-right bg-yellow">{{form.account_count}}</small>
 	       {%  endif %}
 </a></li>
-	    <li class="header">编辑</li>
-	    <li class="active"><a href="/bd/view_school"><i class="fa fa-circle-o"></i> 新建求租信息</a></li>
-	    <li class="active"><a href="/bd/view_institution"><i class="fa fa-circle-o"></i> 新建出租信息</a></li>
-	    <li class="active"><a href="/bd/view_bulletin"><i class="fa fa-circle-o"></i> 新建公告</a></li>
-	    <li class="active"><a href="/bd/view_account"><i class="fa fa-circle-o"></i> 新建用户帐号</a></li>
+	    {% if current_user.is_authenticated %}<li class="header">编辑</li>{% endif %}
+	    {% if form.user_type and form.user_type == '0'%}<li class="active"><a href="/bd/view_school"><i class="fa fa-circle-o"></i> 新建求租信息</a></li>{% endif %}
+	    {% if form.user_type and form.user_type == '1'%}<li class="active"><a href="/bd/view_institution"><i class="fa fa-circle-o"></i> 新建出租信息</a></li>{% endif %}
+	    {% if form.user_type and form.user_type == '1'%}<li class="active"><a href="/bd/view_bulletin"><i class="fa fa-circle-o"></i> 新建公告</a></li>{% endif %}
 
-	    <li class="header">其他</li>
+	    <li class="header">新功能</li>
             <li><a href="#"><i class="fa fa-circle-o text-red"></i> <span>新功能1</span></a></li>
             <li><a href="#"><i class="fa fa-circle-o text-yellow"></i> <span>新功能2</span></a></li>
             <li><a href="#"><i class="fa fa-circle-o text-aqua"></i> <span>新功能3</span></a></li>
@@ -234,7 +234,7 @@
         <div class="pull-right hidden-xs">
           <b>Version</b> 1.0
         </div>
-        <strong>Copyright &copy; 2015 <a href="http://totalsolution.com"></a>.</strong> All rights reserved.
+        <strong>Copyright &copy; 2017 <a href="http://totalsolution.com"></a>.</strong> All rights reserved.
       </footer>
       <!-- }}} -->
 
