--- a/web/templates/view_rents.html
+++ b/web/templates/view_rents.html
@@ -40,7 +40,7 @@
 	    <td>
 	      <form action="" method="post" name="edit_school" onsubmit="return confirm('确认要提交吗?');">
 		{{f.hidden_tag()}}
-		<input type="submit" value="删除" name="delete">		    
+		{% if current_user.role_id == 1%}<input type="submit" value="删除" name="delete">{% endif%}
 	      </form>
 	    </td>
 	  </tr>
