--- a/web/templates/view_rent.html
+++ b/web/templates/view_rent.html
@@ -7,7 +7,7 @@
 
 <div class="row">
 <div class="col-lg-5 col-xs-10">
-{{ render_field(form.name, size=50)}}
+{{ render_field(form.name, size=50)}}<span>/
 </div>
 <div class="col-lg-5 col-xs-10">
 {{ render_field(form.address, size=50)}}
