--- a/web/templates/view_rent1.html
+++ b/web/templates/view_rent1.html
@@ -42,12 +42,36 @@
          <div class="col-lg-5 col-xs-10">
             {{ render_field(form.description, rows="10", cols="100")}}
         </div>
+        <div class="col-lg-10 col-xs-10">
+            {{ render_field(form.image, accept="image/png, image/jpeg")}}
+            <p><input type="submit" value="上传" name="upload"> 注：接受jpg和png格式的图片，建议图片分辨率1000x800</p>
+        </div>
 
 
     </div>
 
 
     {{form.message}}
+    <div class='box box-default'>
+            <div class='box-header with-border'>
+              <h3 class='box-title'><i class="fa fa-tag"></i> 已经上传的图片</h3>
+            </div>
+            <div class='box-body'>
+              <div class='row'>
+                   {% if form.rentimages %}
+    {% for image in form.rentimages %}
+                <div class='col-sm-8 col-md-4'>
+                  <!-- <h4 class='text-center'>Primary</h4> -->
+		  <img src='{{"/bd/web/files/"+image.file}}' alt='{{image.file}}' height="200" width="200"/>
+		  <a href="javascript:genDeleteRef('{{image.file}}');">删除本图片</a>
+                </div><!-- /.col -->
+    {% endfor %}
+  {% endif %}
+
+
+               </div><!-- /.row -->
+            </div><!-- /.box-body -->
+          </div><!-- /.box -->
 
 
     <p><input type="submit" value="确定" name="confirm"></p>
