--- a/web/templates/view_accounts.html
+++ b/web/templates/view_accounts.html
@@ -11,9 +11,9 @@
         <table class="table table-bordered">
           <tr>
 	    <th style="width: 10px">#</th>
-	    <th>注册电话</th>
-	    <th>是否已认证</th>
-	    <th>来源</th>
+	    <th>注册邮箱</th>
+	    <th>用户名</th>
+	    <th>用户类型</th>
 	    <th></th>
 	    <th style="width: 40px"></th>
 	  </tr>
