--- a/web/templates/view_rents.html
+++ b/web/templates/view_rents.html
@@ -2,70 +2,70 @@
 {% block content %}
 
 <div class="row" style="overflow:hidden; text-overflow:ellipsis;">
-  <div class="col-md-10">
-    <div class="box">
-      <div class="box-header with-border">
-         <h3 class="box-title">--</h3>
-      </div><!-- /.box-header -->
-      <div class="box-body">
-        <table class="table table-bordered">
-          <tr>
-	    <th style="width: 10px">#</th>
-	    <th>学校名称</th>
-	    <th>类型</th>
-	    <th>地址</th>
-	    <th>区县</th>
-	    <th style="width: 40px"></th>
-	  </tr>
- {% if forms %}
-   {% for f in forms %}
-	  <tr>
-	    <td>
-	      {{f.id.data}}
-	    </td>
-	    <td>
-<a href="/bd/view_school?id={{f.id.data}}">
-	      {{f.name.data}}
-</a>
-	    </td>
-	    <td>
-	      {{f.schooltype_name}}
-	    </td>
-	    <td>
-	      {{f.address.data}}
-	    </td>
-	    <td>
-	      {{f.area_name}}
-	    </td>
-	    <td>
-	      <form action="" method="post" name="edit_school" onsubmit="return confirm('确认要提交吗?');">
-		{{f.hidden_tag()}}
-		{% if current_user.role_id == 1%}<input type="submit" value="删除" name="delete">{% endif%}
-	      </form>
-	    </td>
-	  </tr>
-    {% endfor %}
-  {% endif %}
+    <div class="col-md-10">
+        <div class="box">
+            <div class="box-header with-border">
+                <h3 class="box-title">--</h3>
+            </div><!-- /.box-header -->
+            <div class="box-body">
+                <table class="table table-bordered">
+                    <tr>
+                        <th style="width: 10px">#</th>
+                        <th>标题</th>
+                        <th>描述</th>
+                        <th>地址</th>
+                        <th>区县</th>
+                        <th style="width: 40px"></th>
+                    </tr>
+                    {% if forms %}
+                    {% for f in forms %}
+                    <tr>
+                        <td>
+                            {{f.id.data}}
+                        </td>
+                        <td>
+                            <a href="/bd/view_rent?id={{f.id.data}}">
+                                {{f.title.data}}dq
+                            </a>
+                        </td>
+                        <td>
+                            {{f.description.data}}
+                        </td>
+                        <td>
+                            {{f.address.data}}
+                        </td>
+                        <td>
+                            {{f.area_name}}
+                        </td>
+                        <td>
+                            <form action="" method="post" name="edit_school" onsubmit="return confirm('确认要提交吗?');">
+                                {{f.hidden_tag()}}
+                                {% if current_user.role_id == 1%}<input type="submit" value="删除" name="delete">{% endif%}
+                            </form>
+                        </td>
+                    </tr>
+                    {% endfor %}
+                    {% endif %}
 
-    </table>
+                </table>
 
-  </div><!-- /.box-body -->
-  <div class="box-footer clearfix">
-    <ul class="pagination pagination-sm no-margin pull-right">
- {% if paging %}
-      <li><a href="javascript:genPagingRef('/bd/view_schools?page=1');">&laquo;</a></li>
-   {% for i in range(paging.page_from,paging.page_to+1) %}
+            </div><!-- /.box-body -->
+            <div class="box-footer clearfix">
+                <ul class="pagination pagination-sm no-margin pull-right">
+                    {% if paging %}
+                    <li><a href="javascript:genPagingRef('/bd/view_rents?page=1');">&laquo;</a></li>
+                    {% for i in range(paging.page_from,paging.page_to+1) %}
 
-      <li><a href="javascript:genPagingRef('/bd/view_schools?page={{i}}');">{{i}}</a></li>
+                    <li><a href="javascript:genPagingRef('/bd/view_rents?page={{i}}');">{{i}}</a></li>
 
-    {% endfor %}
-      <li><a href="javascript:genPagingRef('/bd/view_schools?page={{paging.total_pages}}');">&raquo;</a></li>
-  {% endif %}
+                    {% endfor %}
+                    <li><a href="javascript:genPagingRef('/bd/view_rents?page={{paging.total_pages}}');">&raquo;</a></li>
+                    {% endif %}
 
-    </ul>
-  </div>
-</div><!-- /.box -->
-</div>
+                </ul>
+            </div>
+        </div><!-- /.box -->
+    </div>
 </div>
 
 
