--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -139,8 +139,8 @@
           <ul class="sidebar-menu">
             <li class="header">导航</li>
 	    <li class="active"><a href="/bd/view_rents"><i class="fa fa-circle-o"></i> 所有求租信息
-		{% if form and form.school_count %}
-               <small class="label pull-right bg-yellow">{{form.school_count}}</small>
+		{% if form and form.rent_count %}
+               <small class="label pull-right bg-yellow">{{form.rent_count}}</small>
 	       {%  endif %}
 </a></li>
 	    <li class="active"><a href="/bd/view_institutions"><i class="fa fa-circle-o"></i> 所有出租信息
