--- a/web/templates/auth/unconfirmed.html
+++ b/web/templates/auth/unconfirmed.html
@@ -12,7 +12,7 @@
     </p>
     <p>
         需要另一封邮件？
-        <a href="{{ url_for('auth.resend_confirmation') }}">点击这里</a>
+        <a href="{{ url_for('resend_confirmation') }}">点击这里</a>
     </p>
 </div>
 {% endblock %}
