--- a/web/templates/view_rent.html
+++ b/web/templates/view_rent.html
@@ -39,6 +39,9 @@
         <div class="col-lg-5 col-xs-10">
             {{ render_field(form.rent_type)}}
         </div>
+        <div class="col-lg-5 col-xs-10">
+            {{ render_field(form.subway_line)}}
+        </div>
          <div class="col-lg-5 col-xs-10">
             {{ render_field(form.description, rows="10", cols="100")}}
         </div>
