--- a/web/templates/view_rents.html
+++ b/web/templates/view_rents.html
@@ -15,6 +15,7 @@
                         <th>描述</th>
                         <th>地址</th>
                         <th>区县</th>
+                        <th>地铁线</th>
                         <th>发布日期</th>
                         <th style="width: 40px"></th>
                     </tr>
@@ -38,6 +39,9 @@
                         </td>
                         <td>
                             {{f.area.name}}
+                        </td>
+                        <td>
+                            {{f.subway.name}}
                         </td>
                         <td>
                             {{f.date}}
