--- a/web/templates/view_demand.html
+++ b/web/templates/view_demand.html
@@ -7,6 +7,9 @@
 
     <div class="row">
         <div class="col-lg-5 col-xs-10">
+            {{ render_field(form.title)}}
+        </div>
+        <div class="col-lg-5 col-xs-10">
             {{ render_field(form.contacts, size=8)}}
         </div>
          <div class="col-lg-5 col-xs-10">
