--- a/web/templates/view_demands.html
+++ b/web/templates/view_demands.html
@@ -13,29 +13,24 @@
                         <th style="width: 10px">#</th>
                         <th>标题</th>
                         <th>描述</th>
-                        <th>地址</th>
                         <th>区县</th>
                         <th>地铁线</th>
                         <th>发布日期</th>
                         <th style="width: 40px"></th>
                     </tr>
-                    {% if rents %}
-                    {% for f in rents %}
-                    <div class="comment-date">{{ moment(f.date).fromNow() }}</div>
+                    {% if demands %}
+                    {% for f in demands %}
                     <tr>
                         <td>
                             {{f.id}}
                         </td>
                         <td>
-                            <a href="/bd/view_rent?id={{f.id.data}}">
-                                {{f.title}}dq
+                            <a href="/bd/view_rent?id={{f.id}}">
+                                {{f.title}}
                             </a>
                         </td>
                         <td>
                             {{f.description}}
-                        </td>
-                        <td>
-                            {{f.address}}
                         </td>
                         <td>
                             {{f.area.name}}
