--- a/web/templates/view_rents.html
+++ b/web/templates/view_rents.html
@@ -5,8 +5,26 @@
     <div class="col-md-10">
         <div class="box">
             <div class="box-header with-border">
-                <h3 class="box-title">--</h3>
+                <tr>
+                {% if areas%}
+                <th>区域</th>
+                {% for area in areas%}
+                <a href="/bd/view_area?id={{area.id}}">
+                {{area.name}}</a>
+                {% endfor %}
+                {% endif %}
+                </tr>
+                <tr>
+                {% if subways%}
+                <th>地铁线路</th>
+                {% for subway in subways%}
+                 <a href="/bd/view_subway?id={{subway.id}}">
+                {{subway.name}}</a>
+                {% endfor%}
+                {% endif %}
+                </tr>
             </div><!-- /.box-header -->
+
             <div class="box-body">
                 <table class="table table-bordered">
                     <tr>
@@ -21,14 +39,13 @@
                     </tr>
                     {% if rents %}
                     {% for f in rents %}
-                    <div class="comment-date">{{ moment(f.date).fromNow() }}</div>
                     <tr>
                         <td>
                             <img src='{{"/bd/web/static/"+f.rentimages.file}}' alt='{{f.rentimages.file}}' height="80" width="80"/>
                         </td>
                         <td>
                             <a href="/bd/view_rent?id={{f.id}}">
-                                {{f.title}}dq
+                                {{f.title}}
                             </a>
                         </td>
                         <td>
