--- a/web/templates/view_demand.html
+++ b/web/templates/view_demand.html
@@ -16,7 +16,7 @@
             {{ render_field(form.phone_number, size=15)}}
         </div>
         <div class="col-lg-5 col-xs-10">
-            {{ render_field(form.rental_mode)}}
+            {{ render_field(form.mode_id)}}
         </div>
         <div class="col-lg-5 col-xs-10">
             {{ render_field(form.area_id)}}
