--- a/web/templates/view_rent.html
+++ b/web/templates/view_rent.html
@@ -34,7 +34,7 @@
             {{ render_field(form.price, size = 8)}}<span>元/月</span>
         </div>
         <div class="col-lg-5 col-xs-10">
-            {{ render_field(form.rental_mode)}}
+            {{ render_field(form.mode_id)}}
         </div>
         <div class="col-lg-5 col-xs-10">
             {{ render_field(form.rent_type)}}
