--- a/web/templates/view_rents.html
+++ b/web/templates/view_rents.html
@@ -77,7 +77,7 @@
                             <img src='{{"/bd/web/static/"+f.rentimages.file}}' alt='{{f.rentimages.file}}' height="80" width="80"/>
                         </td>
                         <td>
-                            {% if current_user.role_id == 1%}<a href="/bd/view_rent?id={{f.id}}">
+                            {% if current_user.role_id == 1 or current_user.id == f.author_id%}<a href="/bd/view_rent?id={{f.id}}">
                             {% else %}<a href="/view_rent?id={{f.id}}">
                             {% endif %}
                                 {{f.title}}
