--- a/web/templates/view_bulletin.html
+++ b/web/templates/view_bulletin.html
@@ -15,10 +15,6 @@
 {{ render_field(form.source, size=50)}}
 </div>
 
-<div class="col-lg-4 col-xs-10">
-{{ render_field(form.dt)}}
-</div>
-
 <div class="col-lg-10 col-xs-10">
 {{ render_field(form.content, rows="4", cols="120")}}
 </div>
@@ -47,7 +43,7 @@
     {% for image in form.bulletinimages %}
                 <div class='col-sm-8 col-md-4'>
                   <!-- <h4 class='text-center'>Primary</h4> -->
-		  <img src='{{"/bd/web/files/"+image.file}}' alt='{{image.file}}' height="200" width="200"/>
+		  <img src='{{"/bd/web/static/"+image.file}}' alt='{{image.file}}' height="200" width="200"/>
 		  <a href="javascript:genDeleteRef('{{image.file}}');">删除本图片</a>
                 </div><!-- /.col -->
     {% endfor %}
